2020-10-13  Jonathan Bedard  <jbedard@apple.com>

        [webkitscmpy] Add `git-webkit find` (Follow up fix)
        https://bugs.webkit.org/show_bug.cgi?id=217534
        <rdar://problem/70152431>

        Unreviewed follow up fix.

        * Scripts/libraries/webkitcorepy/webkitcorepy/__init__.py: Version bump.
        * Scripts/libraries/webkitscmpy/setup.py: "program" was not a directory in the landed change.

2020-10-13  Jonathan Bedard  <jbedard@apple.com>

        [webkitscmpy] Add `git-webkit find`
        https://bugs.webkit.org/show_bug.cgi?id=217534
        <rdar://problem/70152431>

        Reviewed by Dewei Zhu.

        * Scripts/git-webkit: Added.
        * Scripts/libraries/webkitcorepy/webkitcorepy/__init__.py: Bump version.
        * Scripts/libraries/webkitcorepy/webkitcorepy/arguments.py:
        (NoAction.__call__):
        (CountAction): Create an action to increment or decrement a variable by a value.
        (CallbackAction): Create an action which will trigger a callback when set.
        (LoggingGroup): Create a group which allows the user to change logging behavior.
        * Scripts/libraries/webkitscmpy/git-webkit: Added.
        * Scripts/libraries/webkitscmpy/setup.py: Add webkitscmpy.program and git-webkit.
        * Scripts/libraries/webkitscmpy/webkitscmpy/__init__.py: Bump version.
        * Scripts/libraries/webkitscmpy/webkitscmpy/commit.py:
        (Commit): Make the 12 character hash based on a class variable.
        * Scripts/libraries/webkitscmpy/webkitscmpy/local/git.py:
        (Git.default_branch): Fallback to 'master' or 'main' if the remote isn't available.
        (Git.find): Use git to match branches and tags to a hash instead of trying to do it ourselves.
        * Scripts/libraries/webkitscmpy/webkitscmpy/local/scm.py:
        (Scm.find): Add function to convert generic string arguments to a commit, and then find that commit in
        the repository.