@@ -1,3 +1,12 @@
+2020-10-13  Ryosuke Niwa  <rniwa@webkit.org>
+
+        IPC testing JS API should expose a reply and describe the list of arguments for each message
+        https://bugs.webkit.org/show_bug.cgi?id=217565
+
+        Fixed the tests.
+
+        * TestWebKitAPI/Tests/WebKitCocoa/IPCTestingAPI.mm:
+
 2020-10-13  Jonathan Bedard  <jbedard@apple.com>
 
         [webkitscmpy] Add `git-webkit find` (Follow up fix)
